--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
